[Java] Enforce Java 17 source compatibility.